# Qt-Qml_workspace_and_examples

./: README.md
Plugins/ExtensionPlugin_2/: main.cpp  main.qml
Plugins/FileExampleApplicationCmake/: CMakeLists.txt  TextOperation.qml  main.cpp  main.qml
Plugins/FileExamplePluginCmake/: CMakeLists.txt  csvfilereader.cpp  filereader.cpp  filereader.h  filereaderplugin.cpp  filereaderplugin.h  txtfilereader.cpp  txtfilereader.h
Plugins/FileExample_CppLibApplication/: main.cpp
Plugins/FileExample_CppLibPlugin/: FileExample_CppLibPlugin.pro  FileExample_CppLibPlugin_global.h  csvfilereader.cpp  csvfilereader.h  fileexample_cpplibplugin.cpp  fileexample_cpplibplugin.h  txtfilereader.cpp  txtfilereader.h
Plugins/PluginApplicationExampleWithCmake/: CMakeLists.txt  main.cpp  main.qml
Plugins/PluginExamplewithCmake/: CMakeLists.txt  myitem.cpp  myitem.h  mymoduleplugin.cpp  mymoduleplugin.h
Plugins/PluginExamplewithCmake/com/mycompany/qmlcomponents/: qmldir
Plugins/extensionPlugin/: example.qml  extensionPlugin.pro  extensionplugin_plugin.cpp  extensionplugin_plugin.h  myitem.cpp  myitem.h
Plugins/fileExamplePlugin/: csvfilereader.cpp  csvfilereader.h  fileExamplePlugin.pro  fileexampleplugin_plugin.cpp  fileexampleplugin_plugin.h  filereader.cpp  filereader.h  qmldir  textfilereader.cpp  textfilereader.h
Plugins/fileExamplePlugin_2/: CsvOperation.qml  TextOperation.qml  main.cpp  qml.qrc
Plugins/plugin_example1/: CMakeLists.txt  qmldir
QML_examples/ContactPage_example/: Contact.cpp  Contact.h  ContactModel.cpp  ContactModel.h  ContactPage_example.pro  DisplayContact.qml  main.cpp  main.qml  qml.qrc
QML_examples/Contact_Page_AbstarctListModel_example/: Contact.cpp  Contact.h  ContactModel.cpp  ContactModel.h  DisplayContact.qml  main.cpp  main.qml
QML_examples/CustomButton_example/: CustomButton.qml  main.qml
QML_examples/Loader_Task/: Page1.qml  Page2.qml  main.qml
QML_examples/ModelViewDelegate_example/: Header.qml  main.qml
QML_examples/Path_Drawing_Application/: PathItem.cpp  PathItem.h  Path_Drawing_Application.pro  PointGenerator.cpp  PointGenerator.h  main.cpp  main.qml
QML_examples/Qml_loader_task2/: CMakeLists.txt  Page1.qml  Page2.qml  Page3.qml  Page4.qml  Page5.qml  main.cpp  main.qml
QML_examples/Qml_rectangle_task/: CMakeLists.txt  main.cpp  main.qml
QML_examples/Qml_windowtask/: CMakeLists.txt  Page1.qml  Page2.qml  Page3.qml  Page4.qml  Page5.qml  main.cpp  main.qml
QML_examples/chartView_example/: chartView_example.pro  main.cpp  main.qml
QML_examples/qml_anchors/: CMakeLists.txt  main.cpp  main.qml
QML_examples/qml_anchors_example2/: CMakeLists.txt  main.cpp  main.qml
QML_examples/qml_components_example/: CMakeLists.txt  main.cpp  main.qml
QML_examples/qml_frame_example/: CMakeLists.txt  main.cpp  main.qml
QML_examples/qml_loginpage/: CMakeLists.txt  LoginCredential.cpp  LoginCredential.h  main.cpp
QML_examples/student_data_management/: Student.cpp  Student.h  StudentData.cpp  StudentData.h  main.cpp  main.qml  qml.qrc  student_data_management.pro
QML_examples/video_application_sample/: main.qml
QML_projects/Application3D/: CMakeLists.txt  CMakeLists.txt.user.9836d9c  main.cpp
QML_projects/Buttons/: ApplicationMenuPage.qml  CMakeLists.txt  FavouritePage.qml  MenuButton.qml  ProductionPage.qml  SetUpPage.qml  SupportPage.qml  ToolsPage.qml  main.cpp  main.qml  qml.qrc
QML_projects/Calculator_Application/: Calculator_Application.pro  calculator.cpp  calculator.h  main.cpp  main.qml
QML_projects/Gallery_Application_GridView/: CMakeLists.txt  ImageModel.cpp  ImageModel.h  main.cpp  main.qml
QML_projects/Gallery_application_hardcoded/: main.qml  qml.qrc
QML_projects/Holzher_design/: main.qml  qml.qrc
QML_projects/Holzher_design_page/: main.qml  qml.qrc
QML_projects/New_Calculator_Application/: CalculatorButton.cpp  CalculatorButton.h  CalculatorViewModel.cpp  CalculatorViewModel.h  New_Calculator_Application.pro  main.cpp  main.qml
QML_projects/New_Phone_Contacts_App/: Contact.h  ContactModel.cpp  ContactModel.h  main.cpp  main.qml  qml.qrc
QML_projects/Phone_Book_Application/: Contact.cpp  ContactInfo.qml  ContactList.qml  ContactModel.cpp  ContactModel.h  main.cpp  main.qml  qml.qrc
QML_projects/Selected_Contact_Applications/: CallHistory.cpp  CallHistory.h  Contact.cpp  Contact.h  ContactDataModel.cpp  ContactDataModel.h  Phonebook.cpp  Phonebook.h  Selected_Contact_Applications.pro  Whatsapp.cpp  Whatsapp.h  main.cpp  main.qml  qml.qrc
QML_projects/TreeViewExample/: AGENTS.md  TreeViewExample.pro  TreeViewExample.pro.user.c0eb042  company.cpp  company.h  employee.cpp  employee.h  main.cpp  main.qml  mytreeview.cpp  mytreeview.h  qml.qrc  treemodel.cpp  treemodel.h  treeviewexamplemodel.cpp  treeviewexamplemodel.h
QtBugExamples/InjectionOfParameter_bug_example/: CMakeLists.txt  main.cpp  main.qml
QtBugExamples/ItemSelectionModel_bug_example/: CMakeLists.txt  main.qml
QtBugExamples/ItemSelectionModel_fixed_example/: CMakeLists.txt  main.qml
QtBugExamples/QAbstractSocket_isvalid_function_example/: CMakeLists.txt  main.cpp
QtBugExamples/QButtongroup_132349_example/: CMakeLists.txt  main.cpp
QtBugExamples/QByteArray_bug_example/: CMakeLists.txt  main.cpp
QtBugExamples/QByteArray_fixed_example/: CMakeLists.txt  main.cpp
QtBugExamples/QCamera_137359_example/: main.cpp
QtBugExamples/QDateTimeEdit_118393_example/: CMakeLists.txt  main.cpp
QtExamples/Diamond_example/: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  c.cpp  c.h  d.cpp  d.h  main.cpp
QtExamples/calculator_test_example/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp  testcalculator.cpp  testcalculator.h
QtExamples/implement_s_pointers/: Button.cpp  Button.h  CMakeLists.txt  MyClass.cpp  MyClass.h  main.cpp
QtExamples/stl_tutorial_example/: CMakeLists.txt  main.cpp  student.cpp  student.h
QtExamples/template_tutorial/: CMakeLists.txt  main.cpp
QtExamples/template_tutorial_task/: CMakeLists.txt  linkedlist.cpp  linkedlist.h  main.cpp
QtProjects/different_constructors/: CMakeLists.txt  a.cpp  a.h  main.cpp
(+303 files in other folders)
